adds jvm args to testProgressBar gradle task