@@ -44,6 +44,7 @@ tasks {
     }
 
     register("testProgressBar", JavaExec::class) {
+        jvmArgs("--add-opens=java.desktop/java.awt=ALL-UNNAMED", "--add-opens=java.desktop/javax.swing=ALL-UNNAMED")
         group = "pokemon-progress"
         description = "test progress bar"
         classpath = java.sourceSets["test"].runtimeClasspath
